--- a/wercker.yml
+++ b/wercker.yml
@@ -14,4 +14,4 @@ build:
         name: run unit tests
         code: |
           export DJANGO_SETTINGS_MODULE='wercks.test_settings'
-          python manage.py test
+          python manage.py test -v2
